# Spyglass

./: Cargo.toml
.cargo/: config.toml
assets/: README.md  spyglass.toml
assets/fonts/: OFL.txt
assets/values/: strings.xml
src/: assets.rs  data.rs  lib.rs  main.rs  main_menu.rs  prelude.rs  state.rs
src/components/: direction.rs  health.rs  mod.rs  velocity.rs
src/core_plugins/: mod.rs  physics.rs
src/core_plugins/input/: bindings.rs  controller.rs  keyboard.rs  mod.rs  plugin.rs  util.rs
src/entities/: entity.rs  mod.rs  player.rs
src/events/: collision.rs  input.rs  mod.rs
src/remote/: gamepad.rs  keyboard.rs  mod.rs
src/resources/: anti_aliasing.rs  mod.rs  style.rs  text.rs  text_style.rs  window_descriptor.rs
