[package]
name = "spyglass"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.15", features = ["full"] }
bevy = { version = "0.6", features = ["dynamic"] }
bevy_asset_loader = "0.8"
ron = "0.7"
once_cell = "1.9"
serde = { version = "1", features = ["derive"] }
strum = "0.23"
strum_macros = "0.23"